--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand="0.5.5"
-mysql="18.2"
-chrono="0.4"
+# rand="0.5.5"
+# mysql="18.2"
+# chrono="0.4"
+postgres="0.19.2"
